Enhance Longhorn configurations for improved startup reliability and cleanup processes
This commit updates the Longhorn Helm release in `longhorn.tf` to address circular dependency issues by increasing startup tolerance and disabling webhook startup validation. Additional adjustments include refining the webhook configurations to ensure non-blocking behavior during startup. The Makefile is also enhanced with new cleanup commands for Longhorn service accounts and configmaps, ensuring a more comprehensive cleanup process. These changes improve the overall reliability and management of Longhorn resources.

--- a/terraform/Makefile
+++ b/terraform/Makefile
@@ -118,7 +118,7 @@ force-clean: ## Force cleanup of all resources (use when destroy fails)
 	@echo "Step 4: Running terraform destroy..."
 	@terraform destroy -auto-approve || echo "Terraform destroy completed with warnings"
 	@echo "Step 5: Cleaning up leftover cluster-level resources..."
-	@kubectl delete clusterrolebinding system:metrics-server metrics-server:system:auth-delegator dashboard-admin-user --ignore-not-found=true 2>/dev/null || echo "No cluster role bindings to clean"
+	@kubectl delete clusterrolebinding system:metrics-server metrics-server:system:auth-delegator dashboard-admin-user longhorn-bind --ignore-not-found=true 2>/dev/null || echo "No cluster role bindings to clean"
 	@kubectl delete clusterrole system:metrics-server system:metrics-server-aggregated-reader longhorn-role system:node-proxier --ignore-not-found=true 2>/dev/null || echo "No cluster roles to clean"
 	@kubectl delete storageclass longhorn --ignore-not-found=true 2>/dev/null || echo "No storage classes to clean"
 	@kubectl delete priorityclass longhorn-critical --ignore-not-found=true 2>/dev/null || echo "No priority classes to clean"
@@ -136,11 +136,15 @@ force-clean: ## Force cleanup of all resources (use when destroy fails)
 	@kubectl delete daemonsets,deployments,replicasets -n monitoring --all --ignore-not-found=true 2>/dev/null || echo "No monitoring controllers to delete"
 	@kubectl delete daemonsets,deployments,replicasets -n baget --all --ignore-not-found=true 2>/dev/null || echo "No baget controllers to delete"
 	@kubectl delete daemonsets,deployments,replicasets -n kubernetes-dashboard --all --ignore-not-found=true 2>/dev/null || echo "No dashboard controllers to delete"
+	@echo "Step 8b: Clean up Longhorn service accounts and remaining resources..."
+	@kubectl delete serviceaccount -n longhorn-system longhorn-service-account --ignore-not-found=true 2>/dev/null || echo "No longhorn service account to delete"
+	@kubectl delete configmap -n longhorn-system --all --ignore-not-found=true 2>/dev/null || echo "No longhorn configmaps to delete"
 	@echo "Step 9: Clean up Longhorn CRDs and webhooks..."
 	@kubectl delete crd -l app.kubernetes.io/name=longhorn --ignore-not-found=true 2>/dev/null || echo "Longhorn CRDs with label not found, trying individual deletion..."
 	@kubectl delete crd backingimagedatasources.longhorn.io backingimagemanagers.longhorn.io backingimages.longhorn.io backupbackingimages.longhorn.io backups.longhorn.io backuptargets.longhorn.io backupvolumes.longhorn.io engineimages.longhorn.io engines.longhorn.io instancemanagers.longhorn.io nodes.longhorn.io orphans.longhorn.io recurringjobs.longhorn.io replicas.longhorn.io settings.longhorn.io sharemanagers.longhorn.io snapshots.longhorn.io supportbundles.longhorn.io systembackups.longhorn.io systemrestores.longhorn.io volumeattachments.longhorn.io volumes.longhorn.io --ignore-not-found=true 2>/dev/null || echo "Individual Longhorn CRDs not found"
-	@kubectl delete validatingwebhookconfigurations longhorn-webhook-validator --ignore-not-found=true 2>/dev/null || echo "No longhorn webhook validator"
-	@kubectl delete mutatingwebhookconfigurations longhorn-webhook-mutator --ignore-not-found=true 2>/dev/null || echo "No longhorn webhook mutator"
+	@kubectl delete validatingwebhookconfigurations longhorn-webhook-validator longhorn-admission-webhook --ignore-not-found=true 2>/dev/null || echo "No longhorn webhook validators"
+	@kubectl delete mutatingwebhookconfigurations longhorn-webhook-mutator --ignore-not-found=true 2>/dev/null || echo "No longhorn webhook mutators"
+	@kubectl delete mutatingwebhookconfigurations longhorn-conversion-webhook --ignore-not-found=true 2>/dev/null || echo "No longhorn conversion webhook"
 	@echo "Step 10: Clean up Prometheus/monitoring CRDs..."
 	@kubectl delete crd alertmanagerconfigs.monitoring.coreos.com --ignore-not-found=true 2>/dev/null || echo "No alertmanager configs CRD"
 	@kubectl delete crd alertmanagers.monitoring.coreos.com --ignore-not-found=true 2>/dev/null || echo "No alertmanagers CRD"
@@ -169,6 +173,9 @@ ifeq ($(OS),Windows_NT)
 	@kubectl get pods -n kubernetes-dashboard --ignore-not-found=true 2>nul || echo "✓ kubernetes-dashboard namespace is clean"
 	@kubectl get crd 2>nul | findstr /i "longhorn" >nul && echo "⚠ Some Longhorn CRDs still present" || echo "✓ Longhorn CRDs cleaned up"
 	@kubectl get crd 2>nul | findstr /i "monitoring.coreos.com" >nul && echo "⚠ Some Prometheus CRDs still present" || echo "✓ Prometheus CRDs cleaned up"
+	@kubectl get clusterrole longhorn-role 2>nul && echo "⚠ Longhorn ClusterRole still present" || echo "✓ Longhorn RBAC cleaned up"
+	@kubectl get clusterrolebinding longhorn-bind 2>nul && echo "⚠ Longhorn ClusterRoleBinding still present" || echo "✓ Longhorn ClusterRoleBinding cleaned up"
+	@kubectl get storageclass longhorn 2>nul && echo "⚠ Longhorn StorageClass still present" || echo "✓ Longhorn StorageClass cleaned up"
 	@helm list -A 2>nul | findstr /i -v "NAME" >nul && echo "⚠ Some Helm releases still present:" && helm list -A || echo "✓ All Helm releases cleaned up"
 else
 	@kubectl get pods -n longhorn-system --ignore-not-found=true 2>/dev/null || echo "✓ longhorn-system namespace is clean"
@@ -177,6 +184,9 @@ else
 	@kubectl get pods -n kubernetes-dashboard --ignore-not-found=true 2>/dev/null || echo "✓ kubernetes-dashboard namespace is clean"
 	@kubectl get crd 2>/dev/null | grep -i "longhorn" && echo "⚠ Some Longhorn CRDs still present" || echo "✓ Longhorn CRDs cleaned up"
 	@kubectl get crd 2>/dev/null | grep -i "monitoring.coreos.com" && echo "⚠ Some Prometheus CRDs still present" || echo "✓ Prometheus CRDs cleaned up"
+	@kubectl get clusterrole longhorn-role 2>/dev/null && echo "⚠ Longhorn ClusterRole still present" || echo "✓ Longhorn RBAC cleaned up"
+	@kubectl get clusterrolebinding longhorn-bind 2>/dev/null && echo "⚠ Longhorn ClusterRoleBinding still present" || echo "✓ Longhorn ClusterRoleBinding cleaned up"
+	@kubectl get storageclass longhorn 2>/dev/null && echo "⚠ Longhorn StorageClass still present" || echo "✓ Longhorn StorageClass cleaned up"
 	@helm list -A 2>/dev/null | grep -v "NAME" && echo "⚠ Some Helm releases still present:" && helm list -A || echo "✓ All Helm releases cleaned up"
 endif
 	@echo "✅ Comprehensive cleanup completed!"
