--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -26,6 +26,9 @@ baget_cpu_request    = "250m"
 baget_cpu_limit      = "500m"
 
 # Chart Versions (update as needed)
+flannel_version                   = "v0.27.2"           # Flannel container version
+flannel_cni_plugin_version        = "v1.7.1-flannel2"  # CNI plugin binary version
+flannel_network_cidr              = "10.244.0.0/16"    # Pod network CIDR
 longhorn_chart_version            = "1.6.2"
 prometheus_stack_chart_version    = "57.2.0"
 kubernetes_dashboard_chart_version = "7.13.0"
